# bifrost-agent

./: .gitignore  Cargo.toml  PLAN.md  PRD.md  README.md
crates/agentd/: Cargo.toml  bifrost-agentd.service
crates/agentd/migrations/: 001_initial.sql
crates/agentd/src/: auth.rs  config.rs  lib.rs  main.rs  privilege.rs  progress.rs  retention.rs
crates/agentd/src/adapters/: consistency.rs  file.rs  mod.rs  volume.rs
crates/agentd/src/api/: agent.rs  assets.rs  browse.rs  copies.rs  jobs.rs  mod.rs  restore.rs  slas.rs  types.rs
crates/agentd/src/db/: agent_config.rs  assets.rs  copies.rs  creds.rs  jobs.rs  migrations.rs  mod.rs  models.rs  retention_log.rs  slas.rs
crates/agentd/src/runner/: execute.rs  mod.rs  queue.rs
crates/agentd/src/scheduler/: cron.rs
crates/agentd/src/server/: auth.rs  router.rs  ws.rs
desktop/: bifrost-desktop.desktop  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css  theme.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  tray.rs
desktop/src-tauri/src/agent_client/: http.rs  mod.rs  types.rs  ws.rs
desktop/src/api/: client.ts
desktop/src/api/__tests__/: client.test.ts
desktop/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  JobProgress.tsx  Layout.tsx  LogViewer.tsx  NotificationCenter.tsx  PathPicker.tsx  ScheduleTimeline.tsx  Skeleton.tsx  Toast.tsx
desktop/src/hooks/: useAgent.ts  useAgentEvents.ts  useKeyboardShortcuts.ts
desktop/src/i18n/: en.ts  index.tsx  zh.ts
desktop/src/i18n/__tests__/: i18n.test.ts
desktop/src/pages/: AssetDetail.tsx  Assets.tsx  BackupReport.tsx  Connect.tsx  Dashboard.tsx  EditAsset.tsx  JobDetail.tsx  Jobs.tsx  NewAsset.tsx  Notifications.tsx  SLAPolicies.tsx  Settings.tsx
desktop/src/types/: index.ts
desktop/src/utils/__tests__/: format.test.ts
docs/: ARCHITECTURE.md  CHANGELOG.md
scripts/: rebuild-all.sh
