[workspace]
members = [
    "crates/agentd",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "2"
anyhow = "1"
log = "0.4"

# Agent
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-util = "0.7"
futures-util = "0.3"
cron = "0.15"
ring = "0.17"
clap = { version = "4.5", features = ["derive", "env"] }
tempfile = "3.0"

libc = "0.2"

# Engines (path dependencies via symlinks)
bifrost = { path = "./bifrost", features = ["nfs", "smb"] }
vpt-rs = { path = "./vpt-rs" }

[patch.crates-io]
smb = { git = "https://github.com/XUranus/smb-rs", rev = "fe8eb82d30d0e93dca432b64c2c57adb748b19ac" }
