[package]
name = "bifrost-agentd"
version = "0.1.0"
edition = "2021"
description = "Bifrost backup agent daemon"

[[bin]]
name = "bifrost-agentd"
path = "src/main.rs"

[dependencies]
bifrost = { workspace = true }
vpt-rs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rusqlite = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
cron = { workspace = true }
ring = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
