[package]
name = "bifrost-desktop"
version = "0.1.0"
edition = "2021"
description = "Bifrost Desktop — Tauri GUI client"

[lib]
name = "bifrost_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
